--- a/src/pages/User/Login.scss
+++ b/src/pages/User/Login.scss
@@ -22,8 +22,8 @@
 
   .login-card {
     position: relative;
-    // margin: 30px auto;
-    // width: 400px;
+    margin: 1rem auto;
+    min-width: 40rem;
     height: auto;
     min-height: auto;
     cursor: pointer;
@@ -32,10 +32,71 @@
     border-radius: 15px;
     background: white;
     --bs-card-cap-bg: rgb(0, 0, 0, 0);
+
     &:hover {
-      transform: scale(1.04, 1.04);
+      transform: scale(1.02, 1.02);
       box-sizing: border-box;
-      box-shadow: 1px 1px 61px -11px rgba(0, 0, 0, 0.15);
+      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+    }
+    .profile-container {
+      width: 171px;
+      height: 171px;
+      margin: 0;
+      padding: 0;
+      position: relative;
+      border-radius: 50%;
+      img {
+        border: 1px solid grey;
+        height: 171px;
+        width: 171px;
+      }
+      .overlay {
+        position: absolute;
+        border-radius: 50%;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        opacity: 0;
+        transition: opacity 0.5s;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+      }
+      &:hover {
+        .overlay {
+          opacity: 1;
+        }
+      }
+    }
+    .register-btn {
+      width: 100%;
+      border: 0;
+      background-color: rgb(255, 100, 0);
+      &:hover {
+        background-color: rgb(255, 100, 0, 0.8);
+      }
     }
   }
+
+  // .login-card {
+  //   position: relative;
+  //   // margin: 30px auto;
+  //   // width: 400px;
+  //   height: auto;
+  //   min-height: auto;
+  //   cursor: pointer;
+  //   transition: 0.4s;
+  //   border: 0;
+  //   border-radius: 15px;
+  //   background: white;
+  //   --bs-card-cap-bg: rgb(0, 0, 0, 0);
+  //   &:hover {
+  //     transform: scale(1.04, 1.04);
+  //     box-sizing: border-box;
+  //     box-shadow: 1px 1px 61px -11px rgba(0, 0, 0, 0.15);
+  //   }
+  // }
 }
