--- a/src/pages/User/Register.scss
+++ b/src/pages/User/Register.scss
@@ -1,7 +1,17 @@
 .register-container {
   background-color: wheat;
   min-height: 100vh;
-
+  .login-link {
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: #ff6a00;
+    text-decoration: none;
+    margin-right: 1rem;
+    &:hover {
+      text-decoration: underline;
+      text-underline-offset: 0.125em;
+    }
+  }
   .register-card {
     position: relative;
     margin: 1rem auto;
@@ -18,7 +28,7 @@
     &:hover {
       transform: scale(1.02, 1.02);
       box-sizing: border-box;
-      box-shadow: 0px 0px 25px 1px rgba(0, 0, 0, 0.25);
+      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
     }
     .profile-container {
       width: 171px;
@@ -58,7 +68,7 @@
       border: 0;
       background-color: rgb(255, 100, 0);
       &:hover {
-        outline: 1px solid black;
+        background-color: rgb(255, 100, 0, 0.8);
       }
     }
   }
