--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -1,10 +1,21 @@
 .main-section {
-  background-image: url('../../../public/images/bravery-bg.jpeg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
+  position: relative;
   display: flex;
-
   justify-content: center;
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    opacity: 0.7;
+    background-image: url('../../../public/images/bravery-bg.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+  }
+  .container {
+    position: relative;
+    height: 100vh;
+  }
 }
