--- a/src/pages/Auth/Login.scss
+++ b/src/pages/Auth/Login.scss
@@ -1,22 +1,14 @@
+@import "../../styles/variables.scss";
+
 $layout-breakpoint-mobile: 480px;
 $layout-breakpoint-tablets: 768px;
 $layout-breakpoint-laptop: 1024px;
-.login-container {
-  background-color: wheat;
-  min-height: 100vh;
+
+.login {
+  background-color: $primary;
   display: flex;
   flex-direction: column;
-  .menu-link {
-    font-size: 1.1rem;
-    font-weight: 500;
-    color: #ff6a00;
-    text-decoration: none;
-    margin-right: 1rem;
-    &:hover {
-      text-decoration: underline;
-      text-underline-offset: 0.125em;
-    }
-  }
+  min-height: 100%;
   .card-container {
     flex-grow: 1;
     display: flex;
@@ -29,13 +21,13 @@ $layout-breakpoint-laptop: 1024px;
       h1 {
         font-size: 4rem;
         font-weight: 700;
-        color: black;
+        color: #000000;
       }
       p {
         font-size: 1.5rem;
-        color: black;
+        color: #000000;
         a {
-          color: #ff6a00;
+          color: $secondary;
         }
       }
     }
@@ -45,12 +37,11 @@ $layout-breakpoint-laptop: 1024px;
       min-width: 30rem;
       height: auto;
       min-height: 100%;
-      cursor: pointer;
       transition: 0.4s;
       font-size: large;
       border: 0;
       border-radius: 15px;
-      background: white;
+      background: #ffffff;
       --bs-card-cap-bg: rgb(0, 0, 0, 0);
 
       @media (max-width: $layout-breakpoint-tablets) {
@@ -66,7 +57,7 @@ $layout-breakpoint-laptop: 1024px;
         width: 100%;
         border: 0;
         font-size: large;
-        background-color: rgb(255, 100, 0);
+        background-color: $secondary;
         &:hover {
           background-color: rgb(255, 100, 0, 0.8);
         }
