--- a/src/pages/Auth/Register.scss
+++ b/src/pages/Auth/Register.scss
@@ -1,13 +1,16 @@
+@import "../../styles/variables.scss";
+
 $layout-breakpoint-mobile: 480px;
 $layout-breakpoint-tablets: 768px;
 $layout-breakpoint-laptop: 1024px;
+
 .register-container {
-  background-color: wheat;
-  min-height: 100vh;
+  background-color: $primary;
+  min-height: 100%;
   .menu-link {
     font-size: 1.1rem;
     font-weight: 500;
-    color: #ff6a00;
+    color: $secondary;
     text-decoration: none;
     margin-right: 1rem;
     &:hover {
@@ -21,11 +24,10 @@ $layout-breakpoint-laptop: 1024px;
     min-width: 40rem;
     height: auto;
     min-height: auto;
-    cursor: pointer;
     transition: 0.4s;
     border: 0;
     border-radius: 15px;
-    background: white;
+    background: #fff;
     --bs-card-cap-bg: rgb(0, 0, 0, 0);
 
     @media (max-width: $layout-breakpoint-tablets) {
@@ -45,7 +47,7 @@ $layout-breakpoint-laptop: 1024px;
       position: relative;
       border-radius: 50%;
       img {
-        border: 1px solid grey;
+        border: 1px solid #808080;
         height: 171px;
         width: 171px;
       }
@@ -63,6 +65,9 @@ $layout-breakpoint-laptop: 1024px;
         align-items: center;
         justify-content: center;
         cursor: pointer;
+        label {
+          cursor: pointer;
+        }
       }
       &:hover {
         .overlay {
@@ -73,7 +78,7 @@ $layout-breakpoint-laptop: 1024px;
     .register-btn {
       width: 100%;
       border: 0;
-      background-color: rgb(255, 100, 0);
+      background-color: $secondary;
       &:hover {
         background-color: rgb(255, 100, 0, 0.8);
       }
