--- a/src/pages/Auth/Login.scss
+++ b/src/pages/Auth/Login.scss
@@ -1,14 +1,11 @@
 @import "../../styles/variables.scss";
 
-$layout-breakpoint-mobile: 480px;
-$layout-breakpoint-tablets: 768px;
-$layout-breakpoint-laptop: 1024px;
-
 .login {
   background-color: $primary;
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  height: 100%;
+  padding-bottom: 3.75rem;
   .card-container {
     flex-grow: 1;
     display: flex;
@@ -36,7 +33,7 @@ $layout-breakpoint-laptop: 1024px;
       margin: 1rem auto;
       min-width: 30rem;
       height: auto;
-      min-height: 100%;
+      height: 100%;
       transition: 0.4s;
       font-size: large;
       border: 0;
