--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,43 @@
+@import url("https://fonts.googleapis.com/css2?family=Carattere&display=swap");
 @import "bootstrap";
 @import "./variables.scss";
+
+:root {
+  --white: #ffffff;
+  --black: #000000;
+  --pink: #d5199b;
+  --dark-pink: #b71884;
+  --dark-grey: #707070;
+  --grey: #a7a7a7;
+  --light-grey-1: #f6f6f6;
+  --light-grey-0: #f3f3f3;
+  --light-blue: #b1d5d6;
+  --light-red: #e79492;
+  --yellow: #fce93b;
+  --dark-yellow: #f8be59;
+  --green: #5dcc79;
+  --dark-green: #338c26;
+  --transparent-light-green-1: #98c59200;
+  --light-green-1: #98c592;
+  --light-green-0: #daf1d8;
+  --red: #dc3545;
+  --primary: #f9d2b8;
+  --secondary: #ff6a00;
+  --success: #198754;
+  --info: #0dcaf0;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #212529;
+}
+
+body.dark-theme {
+  --white: #212121;
+  --black: #ffffff;
+  --light-grey-1: #707070;
+  --light-grey-0: #707070;
+  --light-green-0: #5dcc79;
+}
 
 *,
 *::before,
@@ -32,100 +70,118 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  // for development
+  .development {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.2);
+    padding: 9px 20px;
+    font-weight: bolder;
+    width: 100%;
+    text-align: center;
+  }
+
+  // for loading
+  .loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    background: transparent;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    z-index: 1;
+    overflow: hidden;
+    // .spinner-border {
+    //   color: $white;
+    // }
+  }
+
+  //For custom designs
+  /*for Divider line*/
+  .divider-custom {
+    margin: 1.25rem 0 1.5rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &-line {
+      width: 100%;
+      max-width: 7rem;
+      height: 0.25rem;
+      background-color: #2c3e50;
+      border-radius: 1rem;
+      border-color: #2c3e50 !important;
+      &:first-child {
+        margin-right: 1rem;
+      }
+      &:last-child {
+        margin-left: 1rem;
+      }
+    }
+    &-icon {
+      color: #2c3e50 !important;
+      font-size: 2rem;
+    }
+  }
+  .divider-custom.divider-light {
+    .divider-custom-line {
+      background-color: #fff;
+    }
+    .divider-custom-icon {
+      color: #fff !important;
+    }
+  }
+
+  //For MainPage.jsx
+  .site-container {
+    padding: 1rem;
+    .masthead {
+      padding-top: calc(6rem + 2px);
+      padding-bottom: 6rem;
+      &-heading {
+        font-size: 2.25rem;
+        line-height: 2.75rem;
+      }
+      &-subheading {
+        font-size: 1.25rem;
+      }
+      &-avatar {
+        object-fit: cover;
+        width: 15rem;
+        height: 15rem;
+        border-radius: 50%;
+      }
+    }
+  }
+  @media (max-width: 992px) {
+    .shadow-lg {
+      box-shadow: none !important;
+    }
+    .site-container {
+      padding: 0;
+    }
+  }
+  @media (min-width: 992px) {
+    .masthead {
+      padding-top: calc(6rem + 104px);
+      padding-bottom: 6rem;
+      &-heading {
+        font-size: 4rem;
+        line-height: 3.5rem;
+      }
+      &-subheading {
+        font-size: 1.5rem;
+      }
+    }
+  }
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-// for development
-.development {
-  position: fixed;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.2);
-  padding: 9px 20px;
-  font-weight: bolder;
-  width: 100%;
-  text-align: center;
-}
-
-//For custom designs
-/*for Divider line*/
-.divider-custom {
-  margin: 1.25rem 0 1.5rem;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .divider-custom-line {
-    width: 100%;
-    max-width: 7rem;
-    height: 0.25rem;
-    background-color: #2c3e50;
-    border-radius: 1rem;
-    border-color: #2c3e50 !important;
-    &:first-child {
-      margin-right: 1rem;
-    }
-    &:last-child {
-      margin-left: 1rem;
-    }
-  }
-  .divider-custom-icon {
-    color: #2c3e50 !important;
-    font-size: 2rem;
-  }
-}
-.divider-custom.divider-light {
-  .divider-custom-line {
-    background-color: #fff;
-  }
-  .divider-custom-icon {
-    color: #fff !important;
-  }
-}
-
-//For MainPage.jsx
-.site-container {
-  padding: 1rem;
-  .masthead {
-    padding-top: calc(6rem + 2px);
-    padding-bottom: 6rem;
-    .masthead-heading {
-      font-size: 2.25rem;
-      line-height: 2.75rem;
-    }
-    .masthead-subheading {
-      font-size: 1.25rem;
-    }
-    .masthead-avatar {
-      object-fit: cover;
-      width: 15rem;
-      height: 15rem;
-      border-radius: 50%;
-    }
-  }
-}
-@media (max-width: 992px) {
-  .shadow-lg {
-    box-shadow: none !important;
-  }
-  .site-container {
-    padding: 0;
-  }
-}
-@media (min-width: 992px) {
-  .masthead {
-    padding-top: calc(6rem + 104px);
-    padding-bottom: 6rem;
-    .masthead-heading {
-      font-size: 4rem;
-      line-height: 3.5rem;
-    }
-    .masthead-subheading {
-      font-size: 1.5rem;
-    }
-  }
 }
 
 // .profile-pic-div {
@@ -162,22 +218,22 @@ code {
 //   }
 // }
 
-.loginSection {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  flex-flow: wrap;
-  align-items: center;
-  justify-content: center;
-  .loginContainer {
-    width: 50%;
-    @media (max-width: 768px) {
-      width: 95%;
-    }
-  }
-}
-.chatWrapper {
-  border: 0.2px solid rgb(26, 188, 156);
-  box-shadow: 0 1rem 3rem rgba(26, 188, 156, 0.175);
-  border-radius: 8px;
-}
+// .loginSection {
+//   height: 100%;
+//   display: flex;
+//   flex-direction: column;
+//   flex-flow: wrap;
+//   align-items: center;
+//   justify-content: center;
+//   .loginContainer {
+//     width: 50%;
+//     @media (max-width: 768px) {
+//       width: 95%;
+//     }
+//   }
+// }
+// .chatWrapper {
+//   border: 0.2px solid rgb(26, 188, 156);
+//   box-shadow: 0 1rem 3rem rgba(26, 188, 156, 0.175);
+//   border-radius: 8px;
+// }
