--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Carattere&display=swap");
 @import "bootstrap";
-@import "./variables.scss";
+@import "./variables";
 
 :root {
   --white: #ffffff;
