--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,8 +1,8 @@
-@import "./../styles/variables.scss";
+@import "../../styles/variables";
 
 .header {
   background: $primary;
-  padding: 0.5rem 0.3rem;
+  padding: 0.5rem;
   transition: box-shadow 0.3s ease;
   &.header-shadow {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
