Setup chat redux and manage auth flow
- Setup chat redux and manage auth flow
- Added chat sidebar and conversations
- Update logo and fix minor UI changes

--- a/src/pages/Auth/Login.scss
+++ b/src/pages/Auth/Login.scss
@@ -45,6 +45,10 @@
       background: #ffffff;
       --bs-card-cap-bg: rgb(0, 0, 0, 0);
 
+      @media (max-width: $layout-breakpoint-laptop) {
+        min-width: 100%;
+      }
+
       @media (max-width: $layout-breakpoint-tablets) {
         min-width: 100%;
       }
