--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   }
   .navToggleBtn {
-    background-color: $secondary;
+    // background-color: $secondary;
   }
 
   .menu {
