--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,7 +76,7 @@ body {
     position: fixed;
     bottom: 0;
     background: rgba(0, 0, 0, 0.2);
-    padding: 9px 20px;
+    // padding: 9px 20px;
     font-weight: bolder;
     width: 100%;
     text-align: center;
