--- a/src/pages/Auth/Login.scss
+++ b/src/pages/Auth/Login.scss
@@ -4,7 +4,7 @@
   background-color: $primary;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  min-height: 100%;
   padding-bottom: 3.75rem;
   .card-container {
     flex-grow: 1;
@@ -53,9 +53,9 @@
         min-width: 100%;
       }
 
-      .login-form{
-        .form-label{
-          &::after{
+      .login-form {
+        .form-label {
+          &::after {
             content: "*";
             color: rgb(239 68 68);
             margin-left: 0.1rem;
