--- a/src/pages/Auth/Register.scss
+++ b/src/pages/Auth/Register.scss
@@ -7,7 +7,7 @@ $layout-breakpoint-laptop: 1024px;
 .register-container {
   background-color: $primary;
   padding-bottom: 3.75rem;
-  height: 100%;
+  min-height: 100%;
   .menu-link {
     font-size: 1.1rem;
     font-weight: 500;
@@ -40,46 +40,49 @@ $layout-breakpoint-laptop: 1024px;
       box-sizing: border-box;
       box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
     }
-    .profile-container {
-      width: 171px;
-      height: 171px;
-      margin: 0;
-      padding: 0;
-      position: relative;
-      border-radius: 50%;
-      .avatar {
-        label {
-          width: 100%;
-          height: 100%;
-          border-radius: 50%;
-          background-color: rgba(0, 0, 0, 0.5);
-          transition: opacity 0.3s ease;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          opacity: 0;
-          cursor: pointer;
-          position: absolute;
-          top: 0;
-          color: $light;
-          &:hover {
-            opacity: 1;
+
+    .register-form {
+      .profile-container {
+        width: 171px;
+        height: 171px;
+        margin: 0;
+        padding: 0;
+        position: relative;
+        border-radius: 50%;
+        .avatar {
+          label {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: rgba(0, 0, 0, 0.5);
+            transition: opacity 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            cursor: pointer;
+            position: absolute;
+            top: 0;
+            color: $light;
+            &:hover {
+              opacity: 1;
+            }
           }
         }
+        img {
+          border: 1px solid #808080;
+          height: 171px;
+          width: 171px;
+          object-fit: cover;
+        }
       }
-      img {
-        border: 1px solid #808080;
-        height: 171px;
-        width: 171px;
-        object-fit: cover;
-      }
-    }
-    .register-btn {
-      width: 100%;
-      border: 0;
-      background-color: $secondary;
-      &:hover {
-        background-color: rgb(255, 100, 0, 0.8);
+      .register-btn {
+        width: 100%;
+        border: 0;
+        background-color: $secondary;
+        &:hover {
+          background-color: rgb(255, 100, 0, 0.8);
+        }
       }
     }
   }
