--- a/src/pages/Auth/Login.scss
+++ b/src/pages/Auth/Login.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  padding-bottom: 3.75rem;
+  // padding-bottom: 3.75rem;
   .card-container {
     flex-grow: 1;
     display: flex;
